--- a/createCloudfront.yml
+++ b/createCloudfront.yml
@@ -11,11 +11,12 @@ Parameters:
     Type: String
 
 Resources:
-  # OAIdentity:
-  #   Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
-  #   Properties: 
-  #     CloudFrontOriginAccessIdentityConfig:
-  #       Comment: OAI for Udacity exercise
+  OAIdentity:
+    Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
+    Properties: 
+      CloudFrontOriginAccessIdentityConfig:
+        Comment: OAI for Udacity exercises in course 3
+
   CachePolicy1:
     Type: AWS::CloudFront::CachePolicy
     Properties: 
@@ -39,10 +40,10 @@ Resources:
       DistributionConfig: 
         Enabled: true
         Origins:
-          - DomainName: !Sub "${S3BucketName}.s3-website-us-east-1.amazonaws.com"
+          - DomainName: !Sub "${S3BucketName}.s3.amazonaws.com"
             Id: !Ref S3BucketName
-            CustomOriginConfig:
-              OriginProtocolPolicy: https-only
+            S3OriginConfig:
+              OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${OAIdentity}"
         DefaultRootObject: index.html
         DefaultCacheBehavior:
           ViewerProtocolPolicy: redirect-to-https
