--- a/createCloudfront.yml
+++ b/createCloudfront.yml
@@ -11,12 +11,11 @@ Parameters:
     Type: String
 
 Resources:
-  OAIdentity:
-    Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
-    Properties: 
-      CloudFrontOriginAccessIdentityConfig:
-        Comment: OAI for Udacity exercises in course 3
-
+  # OAIdentity:
+  #   Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
+  #   Properties: 
+  #     CloudFrontOriginAccessIdentityConfig:
+  #       Comment: OAI for Udacity exercise
   CachePolicy1:
     Type: AWS::CloudFront::CachePolicy
     Properties: 
@@ -40,10 +39,10 @@ Resources:
       DistributionConfig: 
         Enabled: true
         Origins:
-          - DomainName: !Sub "${S3BucketName}.s3.amazonaws.com"
+          - DomainName: !Sub "${S3BucketName}.s3-website-us-east-1.amazonaws.com"
             Id: !Ref S3BucketName
-            S3OriginConfig:
-              OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${OAIdentity}"
+            CustomOriginConfig:
+              OriginProtocolPolicy: https-only
         DefaultRootObject: index.html
         DefaultCacheBehavior:
           ViewerProtocolPolicy: redirect-to-https
